--- a/src/TidyWindow.App/Views/KnownProcessesPage.xaml
+++ b/src/TidyWindow.App/Views/KnownProcessesPage.xaml
@@ -551,7 +551,8 @@
                         </Style.Triggers>
                     </Style>
                 </Grid.Style>
-                <ScrollViewer VerticalScrollBarVisibility="Auto">
+                <ScrollViewer VerticalScrollBarVisibility="Auto"
+                              CanContentScroll="True">
                     <ScrollViewer.Style>
                         <Style TargetType="ScrollViewer">
                             <Setter Property="Visibility" Value="Visible" />
@@ -562,7 +563,15 @@
                             </Style.Triggers>
                         </Style>
                     </ScrollViewer.Style>
-                    <ItemsControl ItemsSource="{Binding Categories}">
+                    <ItemsControl ItemsSource="{Binding Categories}"
+                                  VirtualizingPanel.IsVirtualizing="True"
+                                  VirtualizingPanel.VirtualizationMode="Recycling"
+                                  VirtualizingPanel.ScrollUnit="Pixel">
+                        <ItemsControl.ItemsPanel>
+                            <ItemsPanelTemplate>
+                                <VirtualizingStackPanel />
+                            </ItemsPanelTemplate>
+                        </ItemsControl.ItemsPanel>
                         <ItemsControl.ItemTemplate>
                             <DataTemplate>
                                 <Expander IsExpanded="{Binding IsExpanded}" Margin="0,0,0,24">
@@ -691,7 +700,6 @@
                         </ItemsControl.ItemTemplate>
                     </ItemsControl>
                 </ScrollViewer>
-
                 <StackPanel HorizontalAlignment="Center"
                             VerticalAlignment="Center">
                     <StackPanel.Style>
