--- a/src/TidyWindow.App/Views/StartupControllerPage.xaml
+++ b/src/TidyWindow.App/Views/StartupControllerPage.xaml
@@ -234,6 +234,11 @@
             <Setter Property="UseLayoutRounding" Value="True" />
             <Setter Property="MinHeight" Value="170" />
             <Setter Property="Cursor" Value="Hand" />
+            <Setter Property="CacheMode">
+                <Setter.Value>
+                    <BitmapCache RenderAtScale="1" EnableClearType="True"/>
+                </Setter.Value>
+            </Setter>
             <Setter Property="Effect">
                 <Setter.Value>
                     <DropShadowEffect BlurRadius="8" ShadowDepth="0" Opacity="0" Color="#111827" />
@@ -457,11 +462,13 @@
                           ScrollViewer.VerticalScrollBarVisibility="Auto"
                           ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                           ScrollViewer.CanContentScroll="True"
+                          ScrollViewer.IsDeferredScrollingEnabled="False"
                           VirtualizingPanel.IsVirtualizing="True"
                           VirtualizingPanel.IsVirtualizingWhenGrouping="True"
                           VirtualizingPanel.VirtualizationMode="Recycling"
                           VirtualizingPanel.ScrollUnit="Pixel"
-                          VirtualizingPanel.CacheLength="4">
+                          VirtualizingPanel.CacheLength="4"
+                          VirtualizingPanel.CacheLengthUnit="Item">
                     <ListView.ItemsPanel>
                         <ItemsPanelTemplate>
                             <VirtualizingStackPanel />
